// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/visualizations/VisualizationsPage.vue renders a different page if no visualizations exist 1`] = `
<div class="visualizations">
  <v-container-stub tag="div">
    <v-row-stub tag="div">
      <h1 class="display-1 mt-5">visualizations.your_visualizations</h1>
    </v-row-stub>
    <v-row-stub tag="div" justify="center">
      <v-col-stub lg="3" tag="div" class="d-flex justify-center flex-column text-center">
        <empty-icon-stub class="align-self-center mb-6"></empty-icon-stub>
        <h3 class="headline">visualizations.add.description</h3>
        <p>visualizations.add.text</p>
        <v-btn-stub color="primary" tag="button" activeclass="" to="[object Object]" large="true" rounded="true" type="button">
          <v-icon-stub>mdi-plus</v-icon-stub>
          visualizations.add.title
        </v-btn-stub>
      </v-col-stub>
    </v-row-stub>
  </v-container-stub>
</div>
`;

exports[`pages/visualizations/VisualizationsPage.vue renders the page 1`] = `
<div class="visualizations">
  <v-container-stub tag="div">
    <v-row-stub tag="div">
      <h1 class="display-1 mt-5">visualizations.your_visualizations</h1>
    </v-row-stub>
    <v-row-stub tag="div">
      <v-col-stub cols="12" md="6" lg="3" tag="div">
        <visualization-card-stub visualization="[object Object]"></visualization-card-stub>
      </v-col-stub>
      <v-col-stub cols="12" md="6" lg="3" tag="div">
        <visualization-card-stub visualization="[object Object]"></visualization-card-stub>
      </v-col-stub>
      <v-col-stub cols="12" md="6" lg="3" tag="div">
        <div class="empty-slot-component-stub" top="">
          <v-card-stub loaderheight="4" to="[object Object]" tag="div" height="100%" minheight="130" hover="true" outlined="true" class="d-flex justify-center align-center text--primary add-card">
            <v-icon-stub color="primary">mdi-plus</v-icon-stub>
          </v-card-stub> <span>visualizations.add.title</span>
        </div>
      </v-col-stub>
    </v-row-stub>
  </v-container-stub>
</div>
`;
